champs/unit_tests/valid/no_space_before_comment_VALID.s
.name "Champ name"
.comment"its comment"

live %0
