champs/unit_tests/invalid/empty_comment.s
.name "Champ name"
.comment 

live %0
